Fixed chat css overlapping with register form.

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -22,7 +22,7 @@
     margin: 0;
 }
 
-.control-label {
+.no-label {
     display: none;
 }
 
@@ -30,8 +30,8 @@
     resize: none;
 }
 
-input#submit {
-    position:relative;
+#chat-send {
+    position: relative;
     float: right !important;
     height: 3em;
     bottom: 3em;
